# AstroEngine

./: .gitignore  AstroEngine.sln  AstroEngine.vcxproj  AstroEngine.vcxproj.filters  CMakeLists.txt  ClassDiagram.cd
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: KeyboardController.cpp  KeyboardController.hpp  ag_buffer.cpp  ag_buffer.hpp  ag_camera.cpp  ag_camera.hpp  ag_command_buffer.cpp  ag_command_buffer.hpp  ag_descriptors.cpp  ag_descriptors.hpp  ag_device.cpp  ag_device.hpp  ag_game_object.cpp  ag_game_object.hpp  ag_instance.cpp  ag_instance.hpp  ag_model.cpp  ag_model.hpp  ag_pipeline.cpp  ag_pipeline.hpp  ag_renderer.cpp  ag_renderer.hpp  ag_swap_chain.cpp  ag_swap_chain.hpp  ag_texture.cpp  ag_texture.hpp  ag_window.cpp  ag_window.hpp  app.cpp  app.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  debug_messenger.cpp  debug_messenger.hpp  device.cpp  device.hpp  frame_buffers.cpp  frame_buffers.hpp  (+37 more)
src/exclude/: descriptors.hpp  gravity_system.cpp  sierpinski_triangle_system.hpp
src/old/: ag_buffer.hpp  ag_descriptors.cpp  ag_descriptors.hpp  ag_device.hpp  ag_game_object.hpp  ag_instance.hpp  ag_model.cpp  ag_model.hpp  ag_pipeline.hpp  ag_renderer.cpp  ag_renderer.hpp  ag_swap_chain.hpp  ag_window.cpp  ag_window.hpp  app.cpp  app.hpp  descriptors.cpp  gravity_system.hpp  main.cpp  sierpinski_triangle_system.cpp
